--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* style.css */
+/* Estilos generales */
 body {
   font-family: Arial, sans-serif;
   background-color: #f2f2f2;
@@ -13,18 +13,41 @@ header, footer {
   padding: 1em;
 }
 
+nav ul {
+  list-style: none;
+  padding: 0;
+}
+
+nav ul li {
+  display: inline-block;
+  margin: 0 10px;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
 main {
   padding: 1em;
 }
 
-section {
+#exercise-container {
   background-color: white;
-  margin: 1em 0;
   padding: 1em;
+  margin: 1em 0;
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0,0,0,0.1);
 }
 
-button {
+input, select, button {
   margin-top: 0.5em;
+  padding: 0.5em;
+  font-size: 1em;
+}
+
+#feedback {
+  margin-top: 1em;
+  font-size: 1.2em;
 }
